--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" 
     integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
 
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -27,7 +29,7 @@
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="#services" class="nav__link">My service</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
+                <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
                 <li class="nav__item"><a href="#" class="nav__link">My work</a></li>
             </ul>
         </nav>
@@ -36,7 +38,7 @@
     <!-- introdutcion-->
     <section id="home" class="intro">
         <h1 class="section__title section__title--intro">
-            Hi I am <strong>Thibaut Verbeke</strong>
+            Hi, I am <strong>Thibaut Verbeke</strong>
         </h1>
         <p class="section__subtitle section__subtitle--intro" > javaScript dev</p>
         <img src="./img/dev-jane-01.jpg" alt="">
@@ -48,21 +50,21 @@
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>css</h3>
+                <h3>Design + Development</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div> <!-- / service -->
 
             <div class="service">
-                <h3>html</h3>
+                <h3>E-Commerce</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div> <!-- / service -->
 
             <div class="service">
-                <h3>java script</h3>
+                <h3>WordPress</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -70,7 +72,80 @@
         </div> <!-- / services -->
         <a href="#work" class="btn">My Work</a>
     </section>
+  
 
+    <!--About Me-->
+    <section class="About-me" id="about">
+        <h2 class="section__title section__title--about">Who I am</h2>
+           <p class="section__subtitle section__subtitle--about">developer based out of belguim</p>
+           
+           <div class="about-me__body">
+               <p>Thibaut is een Belgische streamer, zeiler en programmeur. Hij maakt momenteel voor het eerst programma's in Javascript.</p>
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+           </div>
+        <img src="./img/dev-jane-02.jpg" alt="">
+    </section>
+
+    <!-- My Work -->
+    <section class="my-work" id="work">
+        <h2 class="section__title">My work</h2>
+        <p class="section__subtitle"></p>
+
+        <div class="portfolio">
+            <!-- Portfolio item 01 -->
+            <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-01.jpg" alt="">
+            </a>
+             <!-- Portfolio item 02 -->
+             <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-02.jpg" alt="">
+            </a>
+             <!-- Portfolio item 03 -->
+             <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-03.jpg" alt="">
+            </a>
+             <!-- Portfolio item 04 -->
+             <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-04.jpg" alt="">
+            </a>
+             <!-- Portfolio item 05 -->
+             <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-05.jpg" alt="">
+            </a>
+             <!-- Portfolio item 06 -->
+             <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-06.jpg" alt="">
+            </a>
+             <!-- Portfolio item 07 -->
+             <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-07.jpg" alt="">
+            </a>
+             <!-- Portfolio item 08 -->
+             <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-08.jpg" alt="">
+            </a>
+             <!-- Portfolio item 0 9-->
+             <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-09.jpg" alt="">
+            </a>
+             <!-- Portfolio item 10 -->
+            <a href="#" class="portfolio__item">
+                <img src="./img/portfolio-10.jpg" alt="">
+            </a>
+            
+        </div>
+    </section>
+
+
+    <!-- footer -->
+    <footer>
+        <a href="mailto:thibaut.verbeke2005@hotmail.com" class="footer__link">thibaut.verbeke2005@hotmail.com</a>
+        <ul class="social-list">
+            <li class="social-list__item"><a href="https://www.instagram.com/__flightguy__/" class="social-list__link">A</a></li>
+            <li class="social-list__item"><a href="https://twitter.com/cubeTheCuber_" class="social-list__link">B</a></li>
+            <li class="social-list__item"><a href="https://www.twitch.tv/flightguy3" class="social-list__link">C</a></li>
+        </ul>
+    </footer>
 
 </body>
 </html>
