--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             <li class="social-list__item"><a href="https://www.instagram.com/__flightguy__/" class="social-list__link">A</a></li>
             <li class="social-list__item"><a href="https://twitter.com/cubeTheCuber_" class="social-list__link">B</a></li>
             <li class="social-list__item"><a href="https://www.twitch.tv/flightguy3" class="social-list__link">C</a></li>
+            <li class="social-list__item"><a href="https://www.fiverr.com/thibautverbe312?public_mode=true" class="social-list__link">D</a></li>
         </ul>
     </footer>
 
